--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,1 +1,15 @@
 @import "~bootstrap/scss/bootstrap";
+
+:root::-webkit-scrollbar {
+ display: none;
+  background-color: rgb(75, 138, 255);
+}
+
+:root::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+:root::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
