Filter added -layout change -minor styling tweaks -data flow wip

--- a/src/appComponents/PropertyCards/_propertyCards.scss
+++ b/src/appComponents/PropertyCards/_propertyCards.scss
@@ -1,5 +1,6 @@
 .property-cards-container {
-  height: calc(100vh - 160px);
+  position: relative;
+  height: 100%;
   overflow-y: scroll;
   padding-bottom: 16px;
 }
