--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,7 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
+@import "/node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
 :root::-webkit-scrollbar {
- display: none;
+  display: none;
   background-color: rgb(75, 138, 255);
 }
 
