--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -14,3 +14,17 @@
   background-color: darkgrey;
   outline: 1px solid slategrey;
 }
+
+// removing default styling
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+// custom styling
+
+.all-text-muted > span {
+  color: rgb(65, 65, 65);
+}
