--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -28,3 +28,17 @@ ul {
 .all-text-muted > span {
   color: rgb(65, 65, 65);
 }
+
+// custom icons
+.custom-icon {
+  svg {
+    display: none;
+  }
+  &.empty {
+    display: block;
+    background: url("../icons/logo512.png") no-repeat;
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+  }
+}
