--- a/src/appComponents/PropertyCards/_propertyCards.scss
+++ b/src/appComponents/PropertyCards/_propertyCards.scss
@@ -1,6 +1,6 @@
 .property-cards-container {
   position: relative;
   height: 100%;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   padding-bottom: 16px;
 }
