--- a/src/uiComponents/PropertyCard/_propertyCard.scss
+++ b/src/uiComponents/PropertyCard/_propertyCard.scss
@@ -36,4 +36,21 @@
       }
     }
   }
+  .slick-arrow {
+    z-index: 1;
+    &.slick-prev {
+      left: 2px;
+    }
+    &.slick-next {
+      right: 2px;
+    }
+  }
+  .slick-prev:before,
+  .slick-next:before {
+    color: rgb(134, 134, 134);
+    font-size: 20px;
+    font-weight: 900;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+  }
 }
