--- a/src/uiComponents/PropertyCard/_propertyCard.scss
+++ b/src/uiComponents/PropertyCard/_propertyCard.scss
@@ -1,4 +1,11 @@
 .property-card {
+  &.highlighted {
+    border: 2px solid rgb(232, 70, 51);
+    box-shadow: rgba(232, 70, 51, 0.4) 5px 5px, rgba(232, 70, 51, 0.3) 10px 10px, rgba(232, 70, 51, 0.2) 15px 15px, rgba(232, 70, 51, 0.1) 20px 20px,
+      rgba(232, 70, 51, 0.05) 25px 25px;
+    // box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    // rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  }
   .ant-divider {
     margin: 6px 0;
   }
@@ -25,8 +32,8 @@
     }
   }
   .ant-card-body {
-    height: 400px;
-    overflow-y: auto;
+    height: 330px;
+    overflow-y: none;
     display: flex;
     flex-direction: column;
     .street-view-btn {
